Simplify Spring Boot module to focus on fundamentals
- Reduce CLI topic from 964 to 201 lines (prototyping focus only)
- Reduce auto-configuration topic from 843 to 304 lines
  - Remove "Creating Custom Auto-Configuration" advanced section
- Reduce starter dependencies from 841 to 294 lines
  - Remove "Creating Custom Starters" advanced section
- Update README with:
  - Learning objectives
  - Topic descriptions
  - Topic flow diagram
  - Key concepts summary

Total module reduced from 6482 to 4633 lines (29% reduction)

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>